Rename and initial changes

--- a/TimeOfDay WatchKit Extension/Info.plist
+++ b/TimeOfDay WatchKit Extension/Info.plist
@@ -41,7 +41,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.rogness-software.timeofday.watchkitapp</string>
+			<string>me.smithjw.timeofday.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
@@ -50,5 +50,7 @@
 	<array/>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
+	<key>WKRunsIndependentlyOfCompanionApp</key>
+	<true/>
 </dict>
 </plist>
