--- a/TimeOfDay WatchKit App/Info.plist
+++ b/TimeOfDay WatchKit App/Info.plist
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.rogness-software.timeofday</string>
+	<string>me.smithjw.timeofday</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
