--- a/Complicated Time WatchKit App/Info.plist
+++ b/Complicated Time WatchKit App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>TimeOfDay</string>
+	<string>Complicated Time</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>me.smithjw.timeofday</string>
+	<string>me.smithjw.complicated-time</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
